# CephInC

./: .clang  .gitignore  .gitmodules  .travis.yml  CODE-STYLE.md  Makefile.am  README.md  RoadMap.txt  SCRUM.md  autogen.sh  configure.ac  make_cceph.sh
doc/: 01.Internal.md  11.CCeph系统设计V1.docx  12.CCeph PG状态.docx  CCeph PG状态.docx  CCeph分布式协议设计.docx  CCeph系统设计.docx  CODE-STYLE.md  Internal.md  pic.pptx
doc/Ref/: CephFS-基于RADOS的高性能分布式文件系统.pptx
doc/SystemDesignV1/: CCeph PG状态.docx  pic.pptx
doc/SystemDesignV2/: 01.CoolCeph系统设计V2：00.目录.docx  01.CoolCeph系统设计V2：01.系统概述.docx  01.CoolCeph系统设计V2：02.系统架构.docx  01.CoolCeph系统设计V2：03.数据分布.docx  01.CoolCeph系统设计V2：04.本地引擎.docx  01.CoolCeph系统设计V2：90.备忘.docx  01.CoolCeph系统设计V2：99.DailyBuild.20171122.docx  10.DataDistribution.psd  10.pic.pptx  CCeph系统设计V2：00.目录.docx  CCeph系统设计V2：01.设计目标.docx  CoolCeph系统设计V2：00.目录.docx  CoolCeph系统设计V2：01.设计目标.docx  CoolCeph系统设计V2：02.系统架构.docx  pic.pptx
doc/SystemDesignV3/: 01.CoolCeph系统设计V3：01.系统概述.docx  01.CoolCeph系统设计V3：02.系统架构.docx  01.CoolCeph系统设计V3：03.数据分布.docx  10.pic.pptx
src/: Makefile-env.am  Makefile.am  cceph_osd.c  tmp_client.c
src/client/: Makefile.am  client.c  client.h  null_client.c  null_client.h
src/common/: Makefile.am  ascii.h  assert.c  assert.h  atomic.c  atomic.h  buffer.c  buffer.h  cluster_map.c  cluster_map.h  config.h  context.h  encode.c  encode.h  errno.c  errno.h  global.c  global.h  list.h  log.c  log.h  network.c  network.h  option.c  option.h  osdmap.c  osdmap.h  rbtree.c  rbtree.h  status.h  types.h  util.c  util.h
src/gtest/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
src/gtest/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
src/gtest/build-aux/: config.h
src/gtest/src/.deps/: gtest-all.Po  gtest_main.Po
src/include/: errno.h  int_types.h  librados.h  types.h
src/librados/: Makefile.am  librados.c  librados.h
src/message/: Makefile.am  io.c  io.h  messager.c  messager.h  messenger.c  messenger.h  msg_header.c  msg_header.h  msg_write_obj.c  msg_write_obj.h  server_messenger.c  server_messenger.h
src/msg/: Makefile.am  message.h  msg_header.h  msg_write_obj.c  msg_write_obj.h
src/network/: Makefile.am  io.c
src/os/: Makefile.am  coll_id.c  coll_id.h  file_store.c  file_store.h  mem_store.c  mem_store.h  mem_store_coll_node.c  mem_store_coll_node.h  mem_store_object_node.c  mem_store_object_node.h  object_store.c  object_store.h  op.c  op.h  transaction.c  transaction.h  types.c  types.h
src/osd/: Makefile.am  osd.c  osd.h  osd_create.c  osd_create.h  osd_msg_process.c  osd_msg_process.h  pg.c  pg.h  pg_map.c  pg_map.h  types.c  types.h
src/test/: Makefile.am  common.h  mock_message_io.h  test_client.cc  test_client_client.cc  test_common_buffer.cc  test_common_encode.cc  test_common_log.cc  test_common_option.cc  test_common_osdmap.cc  test_common_util.cc  test_libclient.cc  test_librados.cc  test_message_io.cc  test_message_messenger.cc  test_message_msg_header.cc  test_message_msg_write_obj.cc  test_message_server_messenger.cc  test_os.cc  test_os_coll_id.cc  test_os_mem_store.cc  test_os_mem_store_coll_node.cc  test_os_mem_store_object_node.cc  test_os_transaction.cc  test_os_types.cc  test_osd_osd.cc  test_osd_osd_create.cc  test_osd_pg_map.cc
