libos_la_SOURCES =                \
	os/types.c                    \
	os/transaction.c              \
	os/object_store.c             \
	os/mem_store_object_node.c    \
	os/mem_store_coll_node.c      \
	os/mem_store.c

libos_la_ADLDD =  \
	$(LIBCOMMON)

libos_la_LIBADD = \
	-lpthread

noinst_LTLIBRARIES += libos.la
